tests/ui/imports/append-import-suggestion.stderr
error[E0603]: module `sub_mod` is private
  --> $DIR/append-import-suggestion.rs:13:12
   |
LL | use mod2::{sub_mod::TraitA};
   |            ^^^^^^^ private module
   |
help: consider importing this trait instead:
      mod1::TraitA
  --> $DIR/append-import-suggestion.rs:13:12
   |
LL | use mod2::{sub_mod::TraitA};
   |            ^^^^^^^^^^^^^^^
note: the module `sub_mod` is defined here
  --> $DIR/append-import-suggestion.rs:8:5
   |
LL |     mod sub_mod {
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
